--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
         bottom:20px;
         right:20px;
         text-align:center;
-        opacity:0;
-        transition:opacity 1s ease;
+        opacity:1;
+        transition:opacity 6s ease;
         z-index:20;
     }
 
     #enter-button {
         width:130px;
         cursor:pointer;
-        transition:transform .3s ease;
+        transition:transform 6s ease;
         filter:drop-shadow(0 0 12px rgba(0,0,0,.9));
     }
 
