--- a/movement.html
+++ b/movement.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EPòK | Movement</title>
+<title>EPÒK | Movement</title>
 
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
@@ -81,13 +81,12 @@ body {
     color:#f5f2e8;
 }
 
-/* === INLINE EDITORIAL ART (CORRECT IMPLEMENTATION) === */
+/* === INLINE EDITORIAL ART (NO RESIZE – ORIGINAL IMAGE SIZE) === */
 .manifesto img.inline-art {
-    float:right;
-    width:620px;              /* LARGE */
-    max-width:58%;
-    margin:12px 0 36px 56px;  /* wrap spacing */
-    filter:drop-shadow(0 45px 100px rgba(0,0,0,0.95));
+    float: right;
+    margin: 12px 0 36px 56px;
+    height: auto;
+    filter: drop-shadow(0 45px 100px rgba(0,0,0,0.95));
 }
 
 /* TEXT */
@@ -162,18 +161,8 @@ body {
 @media (max-width:1000px) {
     .manifesto img.inline-art {
         float:none;
-        width:100%;
-        max-width:100%;
         margin:40px 0;
     }
-   /* INLINE MANIFESTO ART — ENFORCED */
-.inline-art {
-    float: right;
-    width: 620px;
-    max-width: 58%;
-    margin: 12px 0 36px 56px;
-    height: auto;
-    display: block;
 }
 </style>
 </head>
@@ -200,7 +189,6 @@ body {
 
 <h1>STEP INTO YOUR EPòK</h1>
 
-<!-- INLINE ART — SAME LAYER AS TEXT -->
 <img src="images/baby.png" alt="EPÒK Movement Art" class="inline-art">
 
 <p>Every era of your life is built on a decision.</p>
@@ -249,13 +237,9 @@ body {
 
 <p>You’re not wearing EPÒK to look different.</p>
 <p>You’re wearing it to mark a moment—the moment you chose growth.</p>
-<h1>STEP INTO YOUR EPòK</h1>
+
 <p><strong>The Story Continues</strong></p>
-<h1>STEP INTO YOUR EPòK</h1>
 
-<img src="images/baby.png" class="inline-art" alt="EPÒK Manifesto Art">
-
-<p>Every era of your life is built on a decision.</p>
 <p>EPòK is also a story—literally.</p>
 
 <p>The universe expands through the book series Panthers & Vampires, where transformation, identity, power, and survival are explored through characters and worlds that reflect the same themes this movement stands on.</p>
@@ -294,11 +278,13 @@ body {
 </section>
 
 <section class="album-section" id="epok-album">
-    <h3>THE SOUND OF EPòK</h3>
+    <h3>THE SOUND OF EPÒK</h3>
     <div class="album-cover">
         <img src="images/album.png" alt="EPÒK Album Cover">
     </div>
-    <a class="album-download" href="music/epok-full-album.zip">DOWNLOAD FULL EPÒK ALBUM</a>
+    <a class="album-download" href="music/epok-full-album.zip">
+        DOWNLOAD FULL EPÒK ALBUM
+    </a>
 </section>
 
 </div>
