--- a/movement.html
+++ b/movement.html
@@ -68,11 +68,13 @@ body {
     color:#f3d688;
 }
 
-/* ================= MANIFESTO (REVISED FOR FLEXBOX) ================= */
+/* ================= MANIFESTO (REVISED FOR FLOAT/WRAP) ================= */
 .manifesto {
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 120px;
+    /* Add clearfix to contain the floated image */
+    overflow: auto; 
 }
 
 .manifesto h1 {
@@ -83,18 +85,13 @@ body {
     color: #f5f1e6;
 }
 
-/* New Flexbox container for the side-by-side layout */
-.manifesto-text-container {
-    display: flex;
-    gap: 48px; /* Space between image and text */
-}
-
-/* Image container styling */
+/* Image container styling for float */
 .manifesto-art {
-    /* Ensures the image stays at the defined width and doesn't stretch */
-    flex-shrink: 0;
-    width: 560px; 
-    max-width: 50%;
+    /* Floats the image to the right, allowing text to wrap on the left */
+    float: right;
+    width: 650px; /* Made the image significantly bigger */
+    max-width: 55%; /* Max width on large screens */
+    margin: 10px 0 32px 55px; /* Top, Right, Bottom, Left margins */
 }
 
 .manifesto-art img {
@@ -116,6 +113,7 @@ body {
     max-width:900px;
     margin:140px auto 0;
     text-align:center;
+    clear: both; /* Ensures this section starts AFTER the floated image */
 }
 
 .philosophy h2 {
@@ -171,19 +169,13 @@ body {
     padding-bottom:6px;
 }
 
-/* ================= RESPONSIVE (Adjusted Breakpoint) ================= */
+/* ================= RESPONSIVE ================= */
 @media (max-width: 1000px) {
-    /* Stack the image and text vertically on small screens */
-    .manifesto-text-container {
-        flex-direction: column;
-        gap: 20px;
-    }
-    
     .manifesto-art {
-        width: 100%;
-        max-width: 100%;
-        margin: 0; /* Clear margins for stacking */
-        order: -1; /* Puts the image above the text on mobile */
+        float:none; /* Disable float on mobile */
+        width:100%;
+        max-width:100%;
+        margin:40px 0; /* Stack vertically with some margin */
     }
 }
 </style>
@@ -211,89 +203,87 @@ body {
 
 <h1>STEP INTO YOUR EPòK</h1>
 
-<div class="manifesto-text-container">
-    
-    <div class="manifesto-art">
-        <img src="images/Baby.png" alt="EPÒK Movement Art">
-    </div>
-
-    <div>
-        <p>Every era of your life is built on a decision.</p>
-        <p>Not every decision is loud.</p>
-        <p>Not every decision is celebrated.</p>
-        <p>Some are made in silence, under pressure, when nobody is watching.</p>
-
-        <p>An EPòK begins when you realize survival alone isn’t enough anymore.</p>
-
-        <p>EPòK is the moment you stop living on autopilot.</p>
-        <p>The moment you refuse to be defined by loss, mistakes, or circumstances.</p>
-        <p>The moment you decide to rebuild—intentionally.</p>
-
-        <p>This movement was not created from theory.</p>
-        <p>It was created from real life.</p>
-
-        <p>From setbacks.</p>
-        <p>From rebuilding after collapse.</p>
-        <p>From learning how to stand again when starting over felt impossible.</p>
-
-        <p>EPòK is about transformation, not perfection.</p>
-        <p>It’s about becoming someone stronger, wiser, and more intentional than who you were before.</p>
-
-        <p><strong>A New Kind of Partnership</strong></p>
-
-        <p>EPòK is also built differently.</p>
-
-        <p>Artificial Intelligence is not used here as a shortcut or a gimmick.</p>
-        <p>AI is treated as a creative and strategic business partner—a collaborator that helps structure ideas, refine vision, and build systems that would normally take teams of people and years of resources.</p>
-
-        <p>This partnership represents the future of independent creation.</p>
-        <p>Human vision, emotion, and experience—combined with intelligence, scale, and precision.</p>
-
-        <p>Not replacing creativity.</p>
-        <p>Amplifying it.</p>
-
-        <p>EPÒK exists at the intersection of human struggle and future technology.</p>
-
-        <p><strong>More Than Clothing</strong></p>
-
-        <p>The clothing is not the product.</p>
-        <p>It’s the uniform.</p>
-
-        <p>Each piece represents a chapter of survival, rise, and becoming.</p>
-        <p>Each design carries meaning, intention, and story.</p>
-
-        <p>You’re not wearing EPÒK to look different.</p>
-        <p>You’re wearing it to mark a moment—the moment you chose growth.</p>
-
-        <p><strong>The Story Continues</strong></p>
-
-        <p>EPÒK is also a story—literally.</p>
-
-        <p>The universe expands through the book series Panthers & Vampires, where transformation, identity, power, and survival are explored through characters and worlds that reflect the same themes this movement stands on.</p>
-
-        <p>The book is not separate from EPÒK.</p>
-        <p>It is part of the same heartbeat.</p>
-
-        <p>More stories are coming.</p>
-        <p>More worlds are coming.</p>
-        <p>More layers of the universe will be revealed over time.</p>
-
-        <p>EPÒK is not a single release.</p>
-        <p>It’s a long-term evolution.</p>
-
-        <p><strong>This Is a Movement</strong></p>
-
-        <p>EPÒK is built for people who are rebuilding.</p>
-        <p>People who are redefining themselves.</p>
-        <p>People who understand that becoming takes time—and courage.</p>
-
-        <p>This is not about hype.</p>
-        <p>This is about identity.</p>
-
-        <p>This is not about trends.</p>
-        <p>This is about timeless growth.</p>
-    </div>
+<!-- The image must come first in the HTML source to have text wrap around it correctly -->
+<div class="manifesto-art">
+    <img src="images/baby.png" alt="EPÒK Movement Art">
 </div>
+
+<!-- All the text paragraphs follow the image -->
+<p>Every era of your life is built on a decision.</p>
+<p>Not every decision is loud.</p>
+<p>Not every decision is celebrated.</p>
+<p>Some are made in silence, under pressure, when nobody is watching.</p>
+
+<p>An EPòK begins when you realize survival alone isn’t enough anymore.</p>
+
+<p>EPòK is the moment you stop living on autopilot.</p>
+<p>The moment you refuse to be defined by loss, mistakes, or circumstances.</p>
+<p>The moment you decide to rebuild—intentionally.</p>
+
+<p>This movement was not created from theory.</p>
+<p>It was created from real life.</p>
+
+<p>From setbacks.</p>
+<p>From rebuilding after collapse.</p>
+<p>From learning how to stand again when starting over felt impossible.</p>
+
+<p>EPòK is about transformation, not perfection.</p>
+<p>It’s about becoming someone stronger, wiser, and more intentional than who you were before.</p>
+
+<p><strong>A New Kind of Partnership</strong></p>
+
+<p>EPòK is also built differently.</p>
+
+<p>Artificial Intelligence is not used here as a shortcut or a gimmick.</p>
+<p>AI is treated as a creative and strategic business partner—a collaborator that helps structure ideas, refine vision, and build systems that would normally take teams of people and years of resources.</p>
+
+<p>This partnership represents the future of independent creation.</p>
+<p>Human vision, emotion, and experience—combined with intelligence, scale, and precision.</p>
+
+<p>Not replacing creativity.</p>
+<p>Amplifying it.</p>
+
+<p>EPÒK exists at the intersection of human struggle and future technology.</p>
+
+<p><strong>More Than Clothing</strong></p>
+
+<p>The clothing is not the product.</p>
+<p>It’s the uniform.</p>
+
+<p>Each piece represents a chapter of survival, rise, and becoming.</p>
+<p>Each design carries meaning, intention, and story.</p>
+
+<p>You’re not wearing EPÒK to look different.</p>
+<p>You’re wearing it to mark a moment—the moment you chose growth.</p>
+
+<p><strong>The Story Continues</strong></p>
+
+<p>EPòK is also a story—literally.</p>
+
+<p>The universe expands through the book series Panthers & Vampires, where transformation, identity, power, and survival are explored through characters and worlds that reflect the same themes this movement stands on.</p>
+
+<p>The book is not separate from EPÒK.</p>
+<p>It is part of the same heartbeat.</p>
+
+<p>More stories are coming.</p>
+<p>More worlds are coming.</p>
+<p>More layers of the universe will be revealed over time.</p>
+
+<p>EPòK is not a single release.</p>
+<p>It’s a long-term evolution.</p>
+
+<p><strong>This Is a Movement</strong></p>
+
+<p>EPÒK is built for people who are rebuilding.</p>
+<p>People who are redefining themselves.</p>
+<p>People who understand that becoming takes time—and courage.</p>
+
+<p>This is not about hype.</p>
+<p>This is about identity.</p>
+
+<p>This is not about trends.</p>
+<p>This is about timeless growth.</p>
+
 
 </section>
 
@@ -319,6 +309,3 @@ body {
 
 </body>
 </html>
-</body>
-</html>
-
