--- a/movement.html
+++ b/movement.html
@@ -67,41 +67,11 @@ body {
     color:#f3d688;
 }
 
-/* ================= MANIFESTO ================= */
+/* ================= MANIFESTO (EMPTY BY DESIGN) ================= */
 .manifesto {
     max-width:1200px;
     margin:0 auto;
     padding-top:120px;
-}
-
-.manifesto h1 {
-    font-size:2.4rem;
-    letter-spacing:0.16em;
-    text-transform:uppercase;
-    margin-bottom:40px;
-    color:#f5f1e6;
-}
-
-/* INLINE, LARGE, WRAPPED ART */
-.manifesto-art {
-    float:right;
-    width:560px;
-    max-width:52%;
-    margin:10px 0 32px 48px;
-}
-
-.manifesto-art img {
-    width:100%;
-    height:auto;
-    filter:drop-shadow(0 40px 90px rgba(0,0,0,0.95));
-}
-
-/* TEXT */
-.manifesto p {
-    font-size:1rem;
-    line-height:1.8;
-    color:#e1dfd8;
-    margin-bottom:18px;
 }
 
 /* ================= PHILOSOPHY ================= */
@@ -163,16 +133,6 @@ body {
     border-bottom:1px solid rgba(243,214,136,0.6);
     padding-bottom:6px;
 }
-
-/* ================= RESPONSIVE ================= */
-@media (max-width:1000px) {
-    .manifesto-art {
-        float:none;
-        width:100%;
-        max-width:100%;
-        margin:40px 0;
-    }
-}
 </style>
 </head>
 
@@ -195,88 +155,7 @@ body {
 <div class="page-frame-inner">
 
 <section class="manifesto">
-
-<h1>STEP INTO YOUR EPòK</h1>
-
-<div class="manifesto-art">
-    <img src="images/baby.png" alt="EPÒK Movement Art">
-</div>
-
-<p>Every era of your life is built on a decision.</p>
-<p>Not every decision is loud.</p>
-<p>Not every decision is celebrated.</p>
-<p>Some are made in silence, under pressure, when nobody is watching.</p>
-
-<p>An EPòK begins when you realize survival alone isn’t enough anymore.</p>
-
-<p>EPòK is the moment you stop living on autopilot.</p>
-<p>The moment you refuse to be defined by loss, mistakes, or circumstances.</p>
-<p>The moment you decide to rebuild—intentionally.</p>
-
-<p>This movement was not created from theory.</p>
-<p>It was created from real life.</p>
-
-<p>From setbacks.</p>
-<p>From rebuilding after collapse.</p>
-<p>From learning how to stand again when starting over felt impossible.</p>
-
-<p>EPòK is about transformation, not perfection.</p>
-<p>It’s about becoming someone stronger, wiser, and more intentional than who you were before.</p>
-
-<p><strong>A New Kind of Partnership</strong></p>
-
-<p>EPòK is also built differently.</p>
-
-<p>Artificial Intelligence is not used here as a shortcut or a gimmick.</p>
-<p>AI is treated as a creative and strategic business partner—a collaborator that helps structure ideas, refine vision, and build systems that would normally take teams of people and years of resources.</p>
-
-<p>This partnership represents the future of independent creation.</p>
-<p>Human vision, emotion, and experience—combined with intelligence, scale, and precision.</p>
-
-<p>Not replacing creativity.</p>
-<p>Amplifying it.</p>
-
-<p>EPòK exists at the intersection of human struggle and future technology.</p>
-
-<p><strong>More Than Clothing</strong></p>
-
-<p>The clothing is not the product.</p>
-<p>It’s the uniform.</p>
-
-<p>Each piece represents a chapter of survival, rise, and becoming.</p>
-<p>Each design carries meaning, intention, and story.</p>
-
-<p>You’re not wearing EPÒK to look different.</p>
-<p>You’re wearing it to mark a moment—the moment you chose growth.</p>
-
-<p><strong>The Story Continues</strong></p>
-
-<p>EPòK is also a story—literally.</p>
-
-<p>The universe expands through the book series Panthers & Vampires, where transformation, identity, power, and survival are explored through characters and worlds that reflect the same themes this movement stands on.</p>
-
-<p>The book is not separate from EPÒK.</p>
-<p>It is part of the same heartbeat.</p>
-
-<p>More stories are coming.</p>
-<p>More worlds are coming.</p>
-<p>More layers of the universe will be revealed over time.</p>
-
-<p>EPÒK is not a single release.</p>
-<p>It’s a long-term evolution.</p>
-
-<p><strong>This Is a Movement</strong></p>
-
-<p>EPÒK is built for people who are rebuilding.</p>
-<p>People who are redefining themselves.</p>
-<p>People who understand that becoming takes time—and courage.</p>
-
-<p>This is not about hype.</p>
-<p>This is about identity.</p>
-
-<p>This is not about trends.</p>
-<p>This is about timeless growth.</p>
-
+    <!-- STEP INTO YOUR EPÒK CONTENT REMOVED -->
 </section>
 
 <section class="philosophy">
@@ -293,7 +172,9 @@ body {
     <div class="album-cover">
         <img src="images/album.png" alt="EPÒK Album Cover">
     </div>
-    <a class="album-download" href="music/epok-full-album.zip">DOWNLOAD FULL EPÒK ALBUM</a>
+    <a class="album-download" href="music/epok-full-album.zip">
+        DOWNLOAD FULL EPÒK ALBUM
+    </a>
 </section>
 
 </div>
@@ -301,4 +182,3 @@ body {
 
 </body>
 </html>
-
